# serializer version: 1
# name: test_state[False][water_heater.basement_my_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 130,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 95,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.basement_my_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'aosmith',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 5>,
    'translation_key': None,
    'unique_id': 'junctionId',
    'unit_of_measurement': None,
  })
# ---
# name: test_state[False][water_heater.basement_my_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'off',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My water heater',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 130,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 95,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 5>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 130,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.basement_my_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'electric',
  })
# ---
# name: test_state[True][water_heater.basement_my_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 130,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 95,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'electric',
        'eco',
        'heat_pump',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.basement_my_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'aosmith',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 7>,
    'translation_key': None,
    'unique_id': 'junctionId',
    'unit_of_measurement': None,
  })
# ---
# name: test_state[True][water_heater.basement_my_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'off',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My water heater',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 130,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 95,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'electric',
        'eco',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'heat_pump',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 7>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 130,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.basement_my_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_pump',
  })
# ---
